@@ -198,8 +198,7 @@ ScreenEdit::ScreenEdit()
 	GAMESTATE->m_PlayerOptions[PLAYER_1].m_fArrowScrollSpeed = 1;
 	GAMESTATE->m_PlayerOptions[PLAYER_1].m_ColorType = PlayerOptions::COLOR_NOTE;
 
-	m_sprBackground.Load( THEME->GetPathTo("Graphics","edit background") );
-	m_sprBackground.StretchTo( CRect(SCREEN_LEFT,SCREEN_TOP,SCREEN_RIGHT,SCREEN_BOTTOM) );
+	m_Background.LoadFromSong( m_pSong );
 
 	shiftAnchor = -1;
 	m_SnapDisplay.SetXY( EDIT_X, EDIT_GRAY_Y );
@@ -332,7 +331,7 @@ void ScreenEdit::Update( float fDeltaTime )
 		}
 	}
 
-	m_sprBackground.Update( fDeltaTime );
+	m_Background.Update( fDeltaTime );
 	m_SnapDisplay.Update( fDeltaTime );
 	m_GrayArrowRowEdit.Update( fDeltaTime );
 	m_NoteFieldEdit.Update( fDeltaTime );
@@ -470,7 +469,7 @@ void ScreenEdit::Update( float fDeltaTime )
 
 void ScreenEdit::DrawPrimitives()
 {
-	m_sprBackground.Draw();
+	m_Background.Draw();
 	m_SnapDisplay.Draw();
 	m_GrayArrowRowEdit.Draw();
 
